--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ env_logger = { version = "0.11", features = ["kv"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
+
+[lints.rust]
+missing_debug_implementations = "warn"
+unsafe_code = "forbid"
