--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ env_logger = { version = "0.11", features = ["kv"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
+pretty_assertions = "1.4"
 
 [lints.rust]
 missing_debug_implementations = "warn"
