--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,20 @@ serde = "1"
 
 [dev-dependencies]
 env_logger = { version = "0.11", features = ["kv"] }
+pretty_assertions = "1.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
-pretty_assertions = "1.4"
 
 [lints.rust]
 missing_debug_implementations = "warn"
 unsafe_code = "forbid"
+
+[lints.clippy]
+missing_errors_doc = "allow"
+missing_panics_doc = "warn"
+module_name_repetitions = "allow"
+pedantic = { level = "warn", priority = -1 }
+
+[lints.rustdoc]
+broken_intra_doc_links = "deny"
