--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ pretty_assertions = "1.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
+futures-util = "0.3"
 
 [lints.rust]
 missing_debug_implementations = "warn"
