--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ missing_debug_implementations = "warn"
 unsafe_code = "forbid"
 
 [lints.clippy]
-missing_errors_doc = "allow"
+missing_errors_doc = "warn"
 missing_panics_doc = "warn"
-module_name_repetitions = "allow"
+nursery = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
 
 [lints.rustdoc]
