--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ futures-util = "0.3"
 pretty_assertions = "1.4"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+structured-logger = { version = "1.0" }
 tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time"] }
 
 [lints.rust]
